# pants-poetry-test-repos

./: .gitignore
multirepo-1/: Dockerfile  pants.toml  pyproject.toml
multirepo-1/project-app/: BUILD  app.py  pyproject.toml
multirepo-1/project-app-async/: BUILD  app.py  pyproject.toml
multirepo-1/project-models/: pyproject.toml
multirepo-1/project-models/project_models/: models.py
multirepo-2/: Dockerfile  README.md  pants.toml  pyproject.toml
multirepo-2/project-app/: BUILD  pyproject.toml
multirepo-2/project-app-async/: BUILD  app.py
multirepo-2/project-models/: BUILD
multirepo-2/project-models/project_models/: BUILD
multirepo-2/project-models/tests/: BUILD  test_models.py
simple/: BUILD  app.py  pyproject.toml
