[tool.poetry]
name = "multirepo-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
project-models = {path = "project-models"}
project-app = {path = "project-app"}
project-app-async = {path = "project-app-asnyc"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
